--- a/index.html
+++ b/index.html
@@ -23,9 +23,18 @@
       href="/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="font-family: 'Josefin Sans', sans-serif; font-size: 20px"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
